--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,2 +1,36 @@
-:root {
+@font-face {
+   font-family: Poppins_Regular;
+   font-display: swap;
+   src: url(./../fonts/Poppins-Regular.woff2) format("woff2"),url(./../fonts/Poppins-Regular.woff) format("woff");
+   font-weight: 400;
+   font-style: normal
 }
+
+@font-face {
+   font-family: Poppins_Medium;
+   font-display: swap;
+   src: url(./../fonts/Poppins-Medium.woff2) format("woff2"),url(./../fonts/Poppins-Medium.woff) format("woff");
+   font-weight: 500;
+   font-style: normal
+}
+
+@font-face {
+   font-family: Poppins_Bold;
+   font-display: swap;
+   src: url(./../fonts/Poppins-Bold.woff2) format("woff2"),url(./../fonts/Poppins-Bold.woff) format("woff");
+   font-weight: 700;
+   font-style: normal
+}
+
+@font-face {
+   font-family: Poppins_Black;
+   font-display: swap;
+   src: url(./../fonts/Poppins-Black.woff2) format("woff2"),url(./../fonts/Poppins-Black.woff) format("woff");
+   font-weight: 900;
+   font-style: normal
+}
+
+:root {
+
+}
+
