--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -31,6 +31,19 @@
 }
 
 :root {
-
+   --h2: 55px/1.1 Poppins_Bold;
+   --p1: 16px/1.3 Poppins_Regular;
+   --button: 18px/1.1 Poppins_Bold;
 }
 
+@include media(max, xl) {
+   :root {
+      --h2: 51px/1.1 Poppins_Bold;
+   }
+}
+
+@include media(max, lg) {
+   :root {
+      --h2: 45px/1.1 Poppins_Bold;
+   }
+}
