--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -33,6 +33,7 @@
 :root {
    --h2: 55px/1.1 Poppins_Bold;
    --p1: 16px/1.3 Poppins_Regular;
+   --link: 16px/1.1 Poppins_Medium;
    --button: 18px/1.1 Poppins_Bold;
 }
 
