--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import "style";
+
 * {
   margin: 0;
   padding: 0;
@@ -11,4 +13,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  overflow: hidden;
+
+  @include media(max, xl) {
+    overflow: visible;
+  }
 }
