--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -1,5 +1,15 @@
 @import './../../style';
 
+.bgAnimation {
+   position: absolute;
+   top: 0;
+   left: -15%;
+
+   @include media(max, xl) {
+      display: none;
+   }
+}
+
 .home {
    min-height: 100vh;
    display: flex;
@@ -31,6 +41,9 @@
 }
 
 .image {
+   position: relative;
+   z-index: 10;
+
    min-height: 90vh;
    min-width: 430px;
    border-radius: 24px;
