--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -26,15 +26,15 @@
 .container {
    @extend .container;
    display: grid;
-   grid-template-columns: 0.8fr var(--minmax);
+   grid-template-columns: 0.9fr var(--minmax);
    grid-auto-flow: column;
+   justify-content: center;
    column-gap: 5%;
 
    @include media(max, xl) {
       grid-template-columns: 1fr;
       grid-auto-rows: var(--minmax);
       grid-auto-flow: row;
-      align-content: center;
       justify-items: center;
       row-gap: 30px;
    }
@@ -46,7 +46,9 @@
 
    min-height: 90vh;
    min-width: 430px;
+
    border-radius: 24px;
+   border: 5px solid var(--background_secondary);
    background: url("./../../assets/images/person.jpeg") no-repeat center center/cover;
 
    @include media(max, xl) {
@@ -55,12 +57,14 @@
       height: 250px;
       width: 250px;
       border-radius: 50%;
-      border: 5px solid var(--background_secondary);
+      transition: border-radius 500ms ease;
    }
 }
 
 .info {
    display: grid;
+   grid-auto-rows: var(--minmax);
+   align-content: center;
    row-gap: 25px;
 
    @include media(max, xl) {
