--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -50,6 +50,7 @@
    border-radius: 24px;
    border: 5px solid var(--background_secondary);
    background: url("./../../assets/images/person.jpeg") no-repeat center center/cover;
+   transition: border 500ms ease;
 
    @include media(max, xl) {
       min-height: unset;
@@ -77,6 +78,7 @@
    max-width: 600px;
    font: var(--h2);
    color: var(--color_secondary);
+   transition: color 500ms ease;
 
    @include media(max, xl) {
       max-width: unset;
@@ -85,6 +87,7 @@
    b {
       display: inline-block;
       color: var(--color);
+      transition: color 500ms ease;
    }
 }
 
@@ -92,6 +95,7 @@
    max-width: 750px;
    font: var(--p1);
    color: var(--color);
+   transition: color 500ms ease;
 
    @include media(max, xl) {
       max-width: unset;
