--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,6 +5,7 @@
    --color_secondary: rgb(255, 74, 74);
    --background: rgb(8, 13, 44);
    --background_secondary: var(--color_secondary);
+   --background_secondary_2: rgb(255, 255, 255);
    --background_wave: rgb(142, 93, 236);
    display: block;
 }
@@ -14,11 +15,11 @@
    --color_secondary: rgb(78, 192, 147);
    --background: rgb(255, 255, 255);
    --background_secondary: var(--color_secondary);
+   --background_secondary_2:  rgb(8, 13, 44);
    --background_wave: rgb(180, 219, 255);
 }
 
 .app {
    min-height: 100vh;
-   background-color: var(--background);
    transition: background-color 500ms ease;
 }
