--- a/src/shared/interactive/theme/Theme.module.scss
+++ b/src/shared/interactive/theme/Theme.module.scss
@@ -1,3 +1,20 @@
+.block {
+   position: fixed;
+   top: 0;
+   right: 0;
+
+   width: 100%;
+   height: 100%;
+   background-color: var(--background);
+   clip-path: circle(0% at 100% 6%);
+   transition: clip-path 1000ms ease;
+}
+
+.block_active {
+   clip-path: circle(200% at 95% 6%);
+   transition: clip-path 1000ms ease;
+}
+
 .theme {
    position: fixed;
    top: 0;
