Add adaptive for menu and component burger

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -21,6 +21,10 @@
       padding-top: var(--padding);
       padding-bottom: var(--padding);
    }
+
+   @include media(max, lg) {
+      padding-top: 90px;
+   }
 }
 
 .container {
