--- a/src/shared/shared_components/menu/Menu.module.scss
+++ b/src/shared/shared_components/menu/Menu.module.scss
@@ -1,12 +1,47 @@
+@import './../../../style';
+
 .header {
    position: absolute;
    top: 50%;
    right: 20px;
+   z-index: 100;
    transform: translateY(-50%);
+
+   @include media(max, xl) {
+      position: fixed;
+      top: 0;
+      left: 0;
+      transform: translateX(-100%);
+
+      width: 100%;
+      height: 100%;
+
+      background-color: var(--background);
+      transition: transform 500ms ease;
+   }
+}
+
+.header_active {
+   transform: translateX(0);
 }
 
 .menu {
    --icon_fill: var(--background);
+
+   @include media(max, xl) {
+      --icon_fill: var(--color);
+      --icon_width: 34px;
+      --icon_height: 34px;
+      padding-top: 150px;
+      padding-left: 48px;
+      padding-right: 48px;
+
+      @include media(max, lg) {
+         padding-top: 100px;
+         padding-left: 20px;
+         padding-right: 20px;
+      }
+   }
 }
 
 .list {
@@ -14,7 +49,17 @@
    grid-auto-rows: var(--minmax);
    row-gap: 20px;
    list-style: none;
+
+   @include media(max, xl) {
+      row-gap: unset;
+   }
 }
 
 .item {
+
+   @include media(max, xl) {
+      border-bottom: 1px solid var(--background_secondary);
+      padding-top: 20px;
+      padding-bottom: 20px;
+   }
 }
