--- a/src/shared/interactive/theme/Theme.module.scss
+++ b/src/shared/interactive/theme/Theme.module.scss
@@ -8,8 +8,8 @@
    width: 100%;
    height: 100%;
    background-color: var(--background);
-   clip-path: circle(0% at 100% 6%);
-   transition: clip-path 1000ms ease;
+   clip-path: circle(0% at 100% 0%);
+   transition: background-color 5s ease, clip-path 1000ms ease;
 }
 
 .block_active {
