--- a/src/pages/about/About.module.scss
+++ b/src/pages/about/About.module.scss
@@ -7,16 +7,37 @@ body {
 .about {
    padding-top: 80px;
    padding-bottom: 50px;
+
+   @include media(max, lg) {
+      padding-top: 100px;
+   }
 }
 
 .container {
    @extend .container;
+   --container_padding: 100px;
+
+   @include media(max, xl) {
+      --container_padding: 40px;
+   }
+
+   @include media(max, lg) {
+      --container_padding: 20px;
+   }
 }
 
 .title_wrap {
    position: relative;
    margin-bottom: 80px;
    text-align: center;
+
+   @include media(max, xl) {
+      margin-bottom: 50px;
+   }
+
+   @include media(max, lg) {
+      margin-bottom: 40px;
+   }
 }
 
 .title {
