--- a/src/shared/interactive/button/Button.module.scss
+++ b/src/shared/interactive/button/Button.module.scss
@@ -20,7 +20,7 @@
   border-radius: var(--border_radius);
   border: 1px solid var(--background_secondary);
   overflow: hidden;
-  transition: background-color 500ms ease, color 500ms ease;
+  transition: border 500ms ease, background-color 500ms ease, color 500ms ease;
 
   span {
     z-index: 10;
@@ -63,4 +63,5 @@
 
   background-color: var(--background_secondary);
   border-radius: 50%;
+  transition: background-color 500ms ease;
 }
