--- a/src/pages/about/components/info/Info.module.scss
+++ b/src/pages/about/components/info/Info.module.scss
@@ -5,10 +5,12 @@
    grid-template-columns: repeat(2, var(--minmax));
    justify-content: center;
    column-gap: 40px;
+   margin-bottom: 80px;
 
    @include media(max, xl) {
       grid-template-columns: 1fr;
       row-gap: 50px;
+      margin-bottom: 50px;
    }
 }
 
