--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -34,10 +34,13 @@
    --h1: 120px/0.75 Poppins_Black;
    --h2: 55px/1.1 Poppins_Bold;
    --h3: 26px/1.2 Poppins_Bold;
+   --h4: 20px/1.2 Poppins_Regular;
    --p1: 16px/1.3 Poppins_Regular;
    --p2: 18px/1.3 Poppins_Medium;
+   --p3: 14px/1.3 Poppins_Regular;
    --link: 16px/1.1 Poppins_Medium;
    --button: 18px/1.1 Poppins_Bold;
+   --caption: 11px/1.1 Poppins_Medium;
 }
 
 @include media(max, xl) {
@@ -51,5 +54,6 @@
    :root {
       --h2: 45px/1.1 Poppins_Bold;
       --h3: 20px/1.1 Poppins_Bold;
+      --h4: 18px/1.2 Poppins_Regular;
    }
 }
