--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -38,7 +38,7 @@
    --p1: 16px/1.3 Poppins_Regular;
    --p2: 18px/1.3 Poppins_Medium;
    --p3: 14px/1.3 Poppins_Regular;
-   --link: 16px/1.1 Poppins_Medium;
+   --link: 16px/1.1 Poppins_Bold;
    --button: 18px/1.1 Poppins_Bold;
    --caption: 11px/1.1 Poppins_Medium;
 }
