--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -35,6 +35,7 @@
    --h2: 55px/1.1 Poppins_Bold;
    --h3: 26px/1.2 Poppins_Bold;
    --h4: 20px/1.2 Poppins_Regular;
+   --h5: 30px/1 Poppins_Bold;
    --p1: 16px/1.3 Poppins_Regular;
    --p2: 18px/1.3 Poppins_Medium;
    --p3: 14px/1.3 Poppins_Regular;
@@ -55,5 +56,6 @@
       --h2: 45px/1.1 Poppins_Bold;
       --h3: 20px/1.1 Poppins_Bold;
       --h4: 18px/1.2 Poppins_Regular;
+      --h5: 28px/1 Poppins_Bold;
    }
 }
