--- a/src/shared/shared_components/card/Card.module.scss
+++ b/src/shared/shared_components/card/Card.module.scss
@@ -6,6 +6,8 @@
    align-items: center;
    justify-content: center;
 
+   text-align: center;
+
    border: 2px solid var(--background_secondary);
    border-radius: 12px;
 
@@ -20,6 +22,7 @@
       left: 50%;
       z-index: 1;
       transform: translate(-50%, -50%) scale(0);
+      opacity: 0.5;
 
       width: 250px;
       height: 250px;
@@ -52,4 +55,10 @@
    color: var(--color);
    cursor: pointer;
    transition: transform 600ms ease, color 500ms ease;
+}
+
+.image {
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
 }
