--- a/src/shared/shared_components/popup/Popup.module.scss
+++ b/src/shared/shared_components/popup/Popup.module.scss
@@ -1,3 +1,5 @@
+@import './../../../style';
+
 .popup {
    position: fixed;
    top: 50%;
@@ -5,18 +7,46 @@
    z-index: 999;
    transform: translate(-50%, -50%);
 
+   display: flex;
+   width: 100%;
+   height: 100%;
+   overflow: auto;
+}
+
+.bg {
+   position: fixed;
+   top: 50%;
+   left: 50%;
+   z-index: 998;
+   transform: translate(-50%, -50%);
+
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.7);
+   cursor: pointer;
+}
+
+.body {
+   position: relative;
+   z-index: 999;
    max-width: 750px;
    width: 100%;
-   height: 650px;
    padding: 40px;
+   margin: auto;
 
-   border: 3px solid var(--background_secondary);
+   box-shadow: 0 2px 15px #000;
+   border: 2px solid var(--background_secondary);
    border-radius: 12px;
    background-color: var(--background);
    transition: background-color 500ms ease, border 500ms ease, box-shadow 500ms ease;
+
+   @include media(max, lg) {
+      padding: 20px;
+   }
 }
 
 .title {
+   margin-bottom: 25px;
    font: var(--h2);
    font-size: 40px;
    text-align: center;
@@ -60,5 +90,70 @@
       &::before {
          background-color: var(--color);
       }
+   }
+}
+
+.list {
+   display: grid;
+   grid-template-columns: var(--minmax);
+   align-items: center;
+   gap: 15px;
+   margin-bottom: 25px;
+}
+
+.item {
+   display: grid;
+   grid-template-columns: repeat(2, var(--minmax));
+   column-gap: 10px;
+
+   @include media(max, lg) {
+      grid-template-columns: 1fr;
+   }
+}
+
+.key {
+   font: var(--h3);
+   color: var(--color_secondary);
+   text-transform: uppercase;
+   transition: color 500ms ease;
+}
+
+.caption {
+   display: grid;
+   grid-auto-columns: var(--minmax);
+   grid-auto-flow: column;
+   align-items: center;
+   column-gap: 5px;
+
+   font: var(--h4);
+   color: var(--color);
+   transition: color 500ms ease;
+}
+
+.caption {
+   a {
+      text-decoration: none;
+
+      &:hover {
+         text-decoration: underline;
+      }
+   }
+}
+
+.image {
+   width: 100%;
+   height: 400px;
+   object-fit: cover;
+   border-radius: 24px;
+
+   border: 1px solid var(--background_secondary);
+   transition: transform 300ms ease;
+
+   @include media(max, lg) {
+      height: 300px;
+   }
+
+   &:hover {
+      transform: scale(1.05);
    }
 }
