--- a/src/pages/portfolio/Portfolio.module.scss
+++ b/src/pages/portfolio/Portfolio.module.scss
@@ -1,21 +1,22 @@
 @import "./../../style";
 
 .portfolio {
-   position: relative;
-
    height: 100vh;
    padding-top: 80px;
-   padding-bottom: 50px;
+   padding-bottom: 80px;
 
    overflow-y: scroll;
    @extend .scrollbar;
 
    @include media(max, lg) {
       padding-top: 100px;
+      padding-bottom: 50px;
    }
 }
 
 .container {
+   position: relative;
+   z-index: 999;
    @extend .container;
    transform: unset;
    animation: unset;
