--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,12 +4,12 @@
    --color: rgb(255, 255, 255);
    --color_secondary: rgb(255, 74, 74);
    --color_secondary_one: rgb(37, 37, 37);
+   --color_secondary_two: rgb(255, 255, 255);
 
    --background: rgb(8, 13, 44);
    --background_secondary: var(--color_secondary);
    --background_secondary_one: var(--color_secondary_one);
-   --background_wave: rgb(142, 93, 236);
-   display: block;
+   --background_secondary_two: rgb(78, 192, 147);
 }
 
 .light_theme {
@@ -20,7 +20,7 @@
    --background: rgb(255, 255, 255);
    --background_secondary: var(--color_secondary);
    --background_secondary_one: var(--color_secondary_one);
-   --background_wave: rgb(180, 219, 255);
+   --background_secondary_two: rgb(255, 74, 74);
 }
 
 .app {
