--- a/src/shared/interactive/animation/planetsSun/PlanetsSun.module.scss
+++ b/src/shared/interactive/animation/planetsSun/PlanetsSun.module.scss
@@ -1,3 +1,5 @@
+@import './../../../../style';
+
 .planet {
    position: absolute;
    top: 10px;
@@ -5,4 +7,9 @@
    z-index: -1;
    width: 150px;
    height: 150px;
+
+   @include media(max, lg) {
+      width: 100px;
+      height: 50px;
+   }
 }
