--- a/src/pages/contact/Contact.module.scss
+++ b/src/pages/contact/Contact.module.scss
@@ -1,6 +1,8 @@
 @import './../../style';
 
 .contact {
+   display: flex;
+   align-items: center;
    height: 100vh;
    padding-top: 80px;
    padding-bottom: 80px;
@@ -30,6 +32,7 @@
    font: var(--p1);
    color: var(--color);
    text-align: center;
+   transition: color 500ms ease;
 
    @include media(max, lg) {
       margin-bottom: 30px;
