--- a/src/pages/about/About.module.scss
+++ b/src/pages/about/About.module.scss
@@ -7,7 +7,7 @@ body {
    height: 100vh;
    padding-top: 80px;
    padding-bottom: 50px;
-   overflow-y: scroll;
+   overflow-y: auto;
    @extend .scrollbar;
 
    @include media(max, lg) {
