--- a/src/shared/shared_components/menu/components/menuMobile/MenuMobile.module.scss
+++ b/src/shared/shared_components/menu/components/menuMobile/MenuMobile.module.scss
@@ -10,6 +10,8 @@
    visibility: hidden;
    width: 100%;
    height: 100%;
+   overflow: auto;
+   @extend .scrollbar;
 
    background-color: var(--background);
    transition: transform 500ms ease;
@@ -30,6 +32,7 @@
 
    @include media(max, lg) {
       padding-top: 100px;
+      padding-bottom: 50px;
       padding-left: 20px;
       padding-right: 20px;
    }
