--- a/src/shared/shared_components/popup/Popup.module.scss
+++ b/src/shared/shared_components/popup/Popup.module.scss
@@ -4,12 +4,13 @@
    position: fixed;
    top: 50%;
    left: 50%;
-   z-index: 999;
+   z-index: 99999;
    transform: translate(-50%, -50%);
 
    display: flex;
-   width: 100%;
+   width: 100vw;
    height: 100%;
+   padding: 0 20px;
    overflow: auto;
 }
 
@@ -41,7 +42,7 @@
    transition: background-color 500ms ease, border 500ms ease, box-shadow 500ms ease;
 
    @include media(max, lg) {
-      padding: 20px;
+      padding: 70px 20px 20px 20px;
    }
 }
 
@@ -57,6 +58,11 @@
    text-transform: uppercase;
    color: var(--color_secondary);
    transition: color 500ms ease;
+
+   @include media(max, lg) {
+      font-size: 28px;
+      font-size: 28px;
+   }
 }
 
 .type {
@@ -77,6 +83,12 @@
    border: none;
    background-color: transparent;
    cursor: pointer;
+
+   @include media(max, lg) {
+      top: 15px;
+      right: 50%;
+      transform: translateX(50%);
+   }
 
    &::after,
    &::before {
@@ -127,6 +139,10 @@
    color: var(--color_secondary);
    text-transform: uppercase;
    transition: color 500ms ease;
+
+   @include media(max, lg) {
+      font-size: 18px;
+   }
 }
 
 .caption {
@@ -139,6 +155,10 @@
    font: var(--h4);
    color: var(--color);
    transition: color 500ms ease;
+
+   @include media(max, lg) {
+      font-size: 16px;
+   }
 }
 
 .caption {
@@ -160,8 +180,12 @@
    border: 1px solid var(--background_secondary);
    transition: transform 300ms ease;
 
+   @include media(max, xl) {
+      height: 350px;
+   }
+
    @include media(max, lg) {
-      height: 300px;
+      height: 250px;
    }
 
    &:hover {
